--- a/src/style/Front.css
+++ b/src/style/Front.css
@@ -155,6 +155,10 @@ body {
 }
 .bottomBoxOuter div {
   width: 200px;
+  display: flex;
+  align-items: center;
+  justify-content: space-evenly;
+  flex-direction: column;
   height: 180px;
   margin: 10px;
   background-color: brown;
